Replace old `typeMapping` by new one in `OpenSearchExprValueFactory`, update tests.
Signed-off-by: Yury-Fridlyand <yuryf@bitquilltech.com>